shitty vs code shit

--- a/public/index.html
+++ b/public/index.html
@@ -54,13 +54,13 @@
         <div id="droptable-csv-list" class="droptable-csv-list">
 
         </div>
-        <span class="droptable-update-time">
+        <div class="droptable-update-time">
             Last update: 
             <span id="droptable-update-date"></span>
             <span id="droptable-update-time"></span>
         </div>
 
-        </span>
+        </div>
 
         <script>
             fetch('/data').then(res => {
