--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
         <title>
             Warframe Droptable
         </title>
+        <link rel="stylesheet" href="/ml/material.min.css">
 
         <style type="text/css">
             * {
