style download links

--- a/public/index.html
+++ b/public/index.html
@@ -72,6 +72,7 @@
                         element.href = '/data/' + link;
                         element.innerText = link;
                         element.setAttribute('download', link);
+                        element.setAttribute('class', 'mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect');
                         container.appendChild(element);
                     }
                 })
