--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,10 @@
                 font-family: Arial, Helvetica, sans-serif;
             }
 
+            body {
+                padding-left: 40px;
+            }
+
             .droptable-csv-list {
                 display: inline-flex;
             }
@@ -36,9 +40,9 @@
     </head>
     <body>
         <header>
-            <h1>
+            <h3>
                 Parsed parts of the warframe droptable.
-            </h1>
+            </h3>
         </header>
         
         <div id="droptable-csv-list" class="droptable-csv-list">
