--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
             .droptable-update-time {
                 font-size: 0.8em;
                 color: rgb(150, 150, 150);
+                margin-left: 4px;
             }
 
             .droptable-update-time span {
