wrap too many links

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
 
             .droptable-csv-list {
                 display: inline-flex;
+                flex-wrap: wrap;
             }
 
             .droptable-csv-list a {
