--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,14 @@
                 color: rgb(150, 150, 150);
                 margin-right: 5px;
             }
+
+            header h3 {
+                margin-left: 2px;
+            }
+
+            .droptable-search {
+                margin-left: 3px;
+            }
         </style>
     </head>
     <body>
