--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
             Warframe Droptable
         </title>
         <link rel="stylesheet" href="/ml/material.min.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <style type="text/css">
             * {
